--- a/package.json
+++ b/package.json
@@ -12,5 +12,13 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BobbyCodes-Ex/react-test.git"
+  },
+  "bugs": {
+    "url": "https://github.com/BobbyCodes-Ex/react-test/issues"
+  },
+  "homepage": "https://github.com/BobbyCodes-Ex/react-test#readme"
 }
